# climate-zarr-slr

./: .gitignore  ADDITIONAL_VARIABLES.md  ADDITIONAL_VARIABLES_STATUS.md  CHANGELOG.md  DATA_INVENTORY.md  DATA_ORGANIZATION.md  GEE_MODULE_PLANNING.md  PIPELINE_DEBUG_SUMMARY.md  README.md  SCENARIO_PROCESSING.md  SSP585_TASMAX_INVESTIGATION.md  pyproject.toml  pytest.ini  test_tasmax.py  test_tasmax_batch.py
.github/: dependabot.yml  release-template.md
.github/workflows/: ci.yml  release.yml
docs/: section_2_3_climate_variables.md
examples/: climate_output_format.yaml  modular_processing_example.py
scripts/: README.md  batch_process_county_stats.py  create_precipitation_map.py  create_temperature_map.py  download_additional_variable.sh  inventory_data.py  monitor_pipeline.py  monitor_processing.py  process_scenario_stage1.sh  process_scenario_stage2.sh  run_gee_batch.py  run_gee_batch_access_cm2.py  run_gee_batch_historical.py  run_gee_batch_monitor.py  run_gee_batch_ssp245.py  scan_and_fix_corruptions.py  transform_climate_stats.py  verify_file_discovery.py  visualize_missing_counties.py
scripts/maintenance/: cleanup_ssp585_zarr.sh
src/climate_zarr/: __init__.py  _version.py  climate_cli.py  climate_config.py  county_processor.py  county_stats_cli.py  demo_cli.py  pipeline.py  stack_nc_to_zarr.py  transform.py
src/climate_zarr/gee/: __init__.py  client.py  config.py  extract.py  pipeline.py  reducers.py  tasks.py
src/climate_zarr/processors/: __init__.py  base_processor.py  precipitation_processor.py  processing_strategies.py  region_strategy.py  tasmax_processor.py  tasmin_processor.py  temperature_processor.py
src/climate_zarr/utils/: __init__.py  data_utils.py  file_discovery.py  memory_utils.py  output_utils.py  spatial_utils.py
tests/: MODULAR_TESTING_GUIDE.md  README.md  TEST_SUMMARY.md  __init__.py  conftest.py  run_integration_tests.py  run_modular_tests.py  test_backward_compatibility.py  test_cli_integration.py  test_end_to_end_modular.py  test_gee_pipeline.py  test_modular_integration.py  test_processors.py  test_strategies.py  test_utils.py  test_zarr_conversion_integration.py
utils/: split_counties_by_region.py
