[project]
name = "climate-zarr-slr"
version = "0.2.0"
description = "Specialized climate data pipeline for sea level rise research: analyzing climate's impact on population and income through NetCDF to Zarr conversion and county-level analysis"
authors = [{name = "Chris Mihiar", email = "chris.mihiar.fs@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["climate", "sea-level-rise", "slr", "zarr", "netcdf", "socioeconomic", "population", "income", "vulnerability", "coastal", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Sociology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "xarray>=2024.1.0",
    "zarr>=2.16.0",
    "netcdf4>=1.6.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",  # Data validation for pipeline config
    "numpy>=1.24.0",
    "dask[distributed]>=2024.1.0",
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "rioxarray>=0.15.0",
    "shapely>=2.0.0",
    "pyogrio>=0.9.0", # Modern I/O engine (replacement for fiona)
    # Modern 2025 additions for cloud-native processing
    "virtualizarr>=1.0.0", # Virtual Zarr stores without copying data
    "h5py>=3.8.0", # HDF5 support for NetCDF reading
    "kerchunk>=0.2.5", # Reference file system for archival data
    "fsspec>=2024.1.0", # Modern file system interface
    "s3fs>=2024.1.0", # S3 support for cloud storage
    "intake>=0.7.0", # Data discovery and loading
    "xarray-datatree>=0.0.13", # Hierarchical data structures
    "cf-xarray>=0.8.0", # Climate and forecast conventions
    "cftime>=1.6.0", # Time handling for climate data
    "bottleneck>=1.3.0", # Fast NumPy operations
    "numcodecs>=0.12.0", # Enhanced compression codecs
    "scikit-learn>=1.7.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-mock>=3.11.0",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]
gee = [
    "earthengine-api>=1.4.0",
    "google-auth>=2.0.0",
]
gee-gcs = [
    "earthengine-api>=1.4.0",
    "google-auth>=2.0.0",
    "gcsfs>=2024.1.0",
]

[project.urls]
"Homepage" = "https://github.com/mihiarc/climate-zarr-slr"
"Bug Tracker" = "https://github.com/mihiarc/climate-zarr-slr/issues"
"Documentation" = "https://github.com/mihiarc/climate-zarr-slr#readme"
"Source" = "https://github.com/mihiarc/climate-zarr-slr"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
climate_zarr = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "rioxarray>=0.19.0",
]
